<resources>
    <string name="app_name">ABNDP3byNoorAlMashhadani</string>
    <string name="quiz_name">Korean Beginner Level Quiz</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="write_name_here">Write Your Name Here</string>
    <string name="start">Start</string>
    <string name="question_one">Q1. Read the following Korean sentences and choose the word that is relevant to each sentence. (3 points)</string>
    <string name="question_one_one">1–1. 사과 있습니다. 그리고 배도 있슴니다.</string>
    <string name="question1option1">요일</string>
    <string name="question1option2">공부</string>
    <string name="question1option3">과일</string>
    <string name="question1option4">생일</string>
    <string name="question_one_two">1–2. 오늘은 1월 1일입니다. 내일은 1월 2일입니다.</string>
    <string name="question2option1">날짜</string>
    <string name="question2option2">방학</string>
    <string name="question2option3">아침</string>
    <string name="question2option4">하루</string>
    <string name="question_one_three">1–3. 아버지는 의사입니다. 어머니는 은행원입니다.</string>
    <string name="question3option1">고향</string>
    <string name="question3option2">보무</string>
    <string name="question3option3">병원</string>
    <string name="question3option4">오빠</string>
    <string name="question_two">Q2. Look at the picture below and choose the korean words that represent items that you can see in the picture. (3 points)</string>
    <string name="question4option1">침대</string>
    <string name="question4option2">창문</string>
    <string name="question4option3">문</string>
    <string name="question4option4">여자</string>
    <string name="question4option5">공</string>
    <string name="question_three">Q3. According to the correct grammar rule for the verb 이다 conjugation, add either 이에요 or 예요 to the following words. (4 points)</string>
    <string name="question_three_one">3–1 학생</string>
    <string name="question_three_two">3–2 의자</string>
    <string name="question_three_three">3–3 이거</string>
    <string name="question_three_four">3–4 집</string>
    <string name="write_answer_here">Write your answer here</string>
    <string name="submit">Submit</string>
    <string name="your_result">Your Result:</string>
    <string name="restart">Restart</string>
</resources>