<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_50"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Q1 -->

        <TextView
            style="@style/questions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one" />

        <!-- Q1-1 -->

        <TextView
            style="@style/sub_questions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one_one" />

        <RadioGroup
            android:id="@+id/question1_1options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp">

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1option1" />

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1option2" />

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1option3" />

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1option4" />
        </RadioGroup>

        <!-- Q1-2 -->

        <TextView
            style="@style/sub_questions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one_two" />

        <RadioGroup
            android:id="@+id/question1_2options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp">

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2option1" />

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2option2" />

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2option3" />

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2option4" />
        </RadioGroup>

        <!-- Q1-3 -->

        <TextView
            style="@style/sub_questions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one_three" />

        <RadioGroup
            android:id="@+id/question1_3options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp">

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3option1" />

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3option2" />

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3option3" />

            <RadioButton
                style="@style/answer_options_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3option4" />
        </RadioGroup>

        <!-- Questions Divider -->

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/purple_50" />

        <!-- Q2 -->

        <TextView
            style="@style/questions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_two" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/bedroom" />

        <CheckBox
            android:id="@+id/question2_option1"
            style="@style/answer_options_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4option1" />

        <CheckBox
            android:id="@+id/question2_option2"
            style="@style/answer_options_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4option2" />

        <CheckBox
            android:id="@+id/question2_option3"
            style="@style/answer_options_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3option3" />

        <CheckBox
            android:id="@+id/question2_option4"
            style="@style/answer_options_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4option4" />

        <CheckBox
            android:id="@+id/question2_option5"
            style="@style/answer_options_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4option5" />

        <!-- Questions Divider -->

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/purple_50" />

        <!-- Q3 -->

        <TextView
            style="@style/questions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_three" />

        <!-- Q3-1 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                style="@style/sub_questions_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question_three_one" />

            <EditText
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/question3_1answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/write_answer_here"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />
        </LinearLayout>

        <!-- Q3-2 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                style="@style/sub_questions_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question_three_two" />

            <EditText
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/question3_2answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/write_answer_here"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />
        </LinearLayout>

        <!-- Q3-3 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                style="@style/sub_questions_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question_three_three" />

            <EditText
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/question3_3answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/write_answer_here"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />
        </LinearLayout>

        <!-- Q3-4 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                style="@style/sub_questions_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question_three_four" />

            <EditText
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/question3_4answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/write_answer_here"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />
        </LinearLayout>

        <!-- Submit Button -->

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:background="@color/purple_500"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>